@startuml View Tour Details
skinparam classAttributeIconSize 0

package "API" {
    class PublicController {
        +GetTourDetail(id: Guid, language: string?): Task<IActionResult>
    }
}

package "Application" {
    class GetPublicTourDetailQuery {
        +Id: Guid
        +Language: string?
    }

    class GetPublicTourDetailQueryHandler {
        -tourRepository: ITourRepository
        -mapper: IMapper
        +Handle(request: GetPublicTourDetailQuery): Task<ErrorOr<TourDto>>
    }

    class TourDto {
        +Id: Guid
        +Name: string
        +Days: List<TourDayDto>
    }
}

package "Domain" {
    interface ITourRepository {
        +GetByIdAsync(id: Guid): Task<TourEntity>
    }

    class TourEntity {
        +Id: Guid
        +TourName: string
        +Days: List<TourDayEntity>
    }
}

PublicController ..> GetPublicTourDetailQuery : uses
GetPublicTourDetailQuery ..> GetPublicTourDetailQueryHandler : handled by
GetPublicTourDetailQueryHandler --> ITourRepository : calls
ITourRepository ..> TourEntity : retrieves
@enduml
